fixed navbar stretching

--- a/src/assets/css/application.css
+++ b/src/assets/css/application.css
@@ -31,6 +31,7 @@ nav {
     justify-items: center;
     align-items: center;
     padding: 5px 20px;
+    max-height: 80px;
 }
 
 .nav-title {
